# uber3d

./: .doxygen.config  .travis.yml  CMakeLists.txt  README.md
cmake/Modules/: BuildBoost.cmake  FindFFTW.cmake  Findcfitsio.cmake
doc/: jcappub.sty  uber3d.tex
specs/: README.md  uber3d.xmi
src/Healpix_cxx/: CMakeLists.txt
src/c_utils/: CMakeLists.txt
src/cxxsupport/: CMakeLists.txt
src/dsbt/: CMakeLists.txt  fastDSBT.cpp  fastDSBT.h
src/libfftpack/: CMakeLists.txt
src/libsharp/: CMakeLists.txt  sharp_cxx.h
src/ssht/: CMakeLists.txt  ssht.h  ssht_sampling.c
src/uber3d/: CMakeLists.txt  alm.h  almn.cc  almn.h  almn_cln_tools.cpp  almn_cln_tools.h  almn_fitsio.cpp  angular_map.h  arr.h  bessel_sampling.cpp  bessel_sampling.h  datatypes.h  dsbt_sbt.cpp  dsbt_sbt.h  harmonic_coefficients.cpp  harmonic_coefficients.h  healpix_sampling.cpp  healpix_sampling.h  main.cpp  main.cpp~  map.cpp  map.h  radial_map.h  radial_sampling.cpp  radial_sampling.h  radial_transform.h  regular_sampling.cpp  regular_sampling.h  separable_transform.cpp  separable_transform.h  sfb_coefficients.cpp  sfb_coefficients.h  sfb_transform.cpp  sfb_transform.h  sharp_sht.cpp  sharp_sht.h  sht.h  spherical_sampling.cpp  spherical_sampling.h  threedim_map.h  (+1 more)
